--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Demo - Client Interface</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <!-- Navigation -->
+    <nav class="main-nav">
+        <div class="nav-container">
+            <div class="nav-logo">🤖 ChatBot SaaS</div>
+            <div class="nav-links">
+                <a href="/docs" class="nav-link">API Docs</a>
+                <a href="/register" class="nav-link nav-link-primary">Register Company</a>
+                <a href="/admin" class="nav-link">Agent Login</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="demo-container">
         <header class="demo-header">
             <h1>🤖 AI Chatbot Demo</h1>
@@ -66,4 +80,5 @@
         });
     </script>
 </body>
+
 </html>
